Added content of Kadra page

--- a/src/data/gallery/plakat-rekrutacja.mdx
+++ b/src/data/gallery/plakat-rekrutacja.mdx
@@ -1,7 +1,7 @@
 ---
 title: Plakat rekrutacyjny
 slug: plakat-rekrutacja
-description: Abigail Donutdough
+description: Warunki naboru na nowy rok szkolny...
 featuredImage: '../../assets/gallery/9-gallery.jpg'
 ---
 
