Made refactoring, added data to contact page and footer

--- a/src/data/teachers/1-teacher-horn.mdx
+++ b/src/data/teachers/1-teacher-horn.mdx
@@ -5,5 +5,5 @@ subject: Trąbka i waltornia
 slug: horn
 image: '../../assets/avatars/1-andrzej_300x225.jpg'
 poster: '../../assets/teachers/9_horn_425x300.png'
-description: Kilka słów o Panu Mierzejewskim...
+description: ...?
 ---
