--- a/src/data/teachers/2-teacher-ks-rytmika.mdx
+++ b/src/data/teachers/2-teacher-ks-rytmika.mdx
@@ -5,5 +5,5 @@ subject: kształcenie słuchu i podstawy rytmiki
 slug: ks-rytmika
 image: '../../assets/avatars/2-marzena_300x225.jpg'
 poster: '../../assets/teachers/1_logo_x425.png'
-description: 'Parę słów o Pani Marzenie...'
+description: ...?
 ---
