--- a/src/data/teachers/4-teacher-piano.mdx
+++ b/src/data/teachers/4-teacher-piano.mdx
@@ -5,5 +5,5 @@ subject: fortepian
 slug: piano
 image: '../../assets/avatars/8-olena_300x213.png'
 poster: '../../assets/teachers/8_piano_425x301.png'
-description: Jakieś parę słów o Pani Olenie...
+description: ...?
 ---
