--- a/src/data/teachers/6-teacher-clarinet.mdx
+++ b/src/data/teachers/6-teacher-clarinet.mdx
@@ -5,5 +5,5 @@ subject: klarnet
 slug: clarinet
 image: '../../assets/avatars/men-1.png'
 poster: '../../assets/teachers/4_logo_x425.png'
-description: Kilka słów o Panu Karolu...
+description: ...?
 ---
