--- a/src/data/teachers/8-teacher-cello.mdx
+++ b/src/data/teachers/8-teacher-cello.mdx
@@ -5,5 +5,5 @@ subject: wiolonczela
 slug: cello
 image: '../../assets/avatars/women-2.png'
 poster: '../../assets/teachers/6_logo_x425.png'
-description: Parę słów o Pani od wiolonczeli...
+description: ...?
 ---
