--- a/src/data/teachers/9-teacher-percussion.mdx
+++ b/src/data/teachers/9-teacher-percussion.mdx
@@ -5,5 +5,5 @@ subject: perkusja
 slug: percussion
 image: '../../assets/avatars/men-3.png'
 poster: '../../assets/teachers/10_percussion_425x301.png'
-description: 'Parę słów o Panu od perkusji...'
+description: ...?
 ---
