--- a/src/data/teachers/3-teacher-ks-aud.mdx
+++ b/src/data/teachers/3-teacher-ks-aud.mdx
@@ -5,5 +5,5 @@ subject: kształcenie słuchu i audycje muzyczne
 slug: ks-aud
 image: '../../assets/avatars/9-orest_300x225.jpg'
 poster: '../../assets/teachers/2_logo_x425.png'
-description: 'Parę słów o Panu Oreście...'
+description: ...?
 ---
