Added data to footer page

--- a/src/data/teachers/1-teacher-horn.mdx
+++ b/src/data/teachers/1-teacher-horn.mdx
@@ -1,7 +1,7 @@
 ---
 id: 1
 name: Andrzej Mierzejewski
-subject: Trąbka i waltornia
+subject: Trąbka
 slug: horn
 image: '../../assets/avatars/1-andrzej_300x225.jpg'
 poster: '../../assets/teachers/9_horn_425x300.png'
