--- a/src/data/teachers/4-teacher-piano1.mdx
+++ b/src/data/teachers/4-teacher-piano1.mdx
@@ -2,7 +2,7 @@
 id: 4
 name: Olena Prodan-Rostkowska
 subject: fortepian
-slug: piano
+slug: piano-1
 image: '../../assets/avatars/8-olena_300x213.png'
 poster: '../../assets/teachers/8_piano_425x301.png'
 description: ...?
