--- a/src/data/teachers/7-teacher-cello.mdx
+++ b/src/data/teachers/7-teacher-cello.mdx
@@ -1,6 +1,6 @@
 ---
-id: 8
-name: Pani od wiolonczeli
+id: 7
+name: Oksana Shankowska
 subject: wiolonczela
 slug: cello
 image: '../../assets/avatars/women-2.png'
