--- a/src/data/teachers/8-teacher-percussion.mdx
+++ b/src/data/teachers/8-teacher-percussion.mdx
@@ -1,6 +1,6 @@
 ---
 id: 9
-name: Pan od perkusji
+name: Emil Walinowicz
 subject: perkusja
 slug: percussion
 image: '../../assets/avatars/men-3.png'
