--- a/src/data/news/1-news.mdx
+++ b/src/data/news/1-news.mdx
@@ -1,5 +1,5 @@
 ---
-title: 
+title: Informacja 1
 slug: info-1
 date: 01-10-2022
 ---
@@ -8,3 +8,4 @@ In hac habitasse platea dictumst. Sed at cursus turpis, eget finibus neque. Sed 
 
 
 
+{/* <iframe src="/news-pdf/1-file.pdf" alt="" width="500" height="280" /> */}
